Fixing the About section page text to be responsive on 420px, the text is being cut off currently

--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -5,27 +5,6 @@
   border-top: 2px solid var(--color-black);
 }
 
-/* .hamburgebutton {
-  cursor: pointer;
-  border: 0;
-  padding: 0 20px; 
-  background-color: transparent;
-  margin: 0 !important;
-  position: absolute;
-  width: 2.29%;
-  top: 2.06rem;
-  right: 4.87%;
-  left: 92.84%;
-  height: 0.81rem;
-  display: none;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-  gap: var(--gap-6xs);
-  z-index: 0;
-} */
-
-/*New edit*/
 .hamburgebutton {
   cursor: pointer;
   border: 0;
@@ -42,7 +21,6 @@
   gap: var(--gap-6xs);
   z-index: 0;
 }
-/*New edit*/
 
 .withhikmah {
   margin: 0;
